src/objects/ffc_statex__SendAccountStatementsSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ffc_statex__CustomStatementLineSortOrder__c</fullName>
        <description>Please input the API Name of the field(s) you wish to order by. E.g. &quot;ffc_statex__DueDate__c, ffc_statex__Transaction__r.c2g__DocumentNumber__c asc&quot; which would order by the Due Date then the document number if multiple documents fall on the same day.</description>
        <inlineHelpText>Please input the API Name of the field(s) you wish to order by. E.g. &quot;ffc_statex__DueDate__c, ffc_statex__Transaction__r.c2g__DocumentNumber__c asc&quot; which would order by the Due Date then the document number if multiple documents fall on the same day.</inlineHelpText>
        <label>Custom Statement Line Sort Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc_statex__DefaultMonthRange__c</fullName>
        <defaultValue>999</defaultValue>
        <inlineHelpText>This value will be used when clicking on the send button to default the month range. i.e. 3 would give a default range of 3 months, for a record of all transactions within the past 3 months. If you want all months use a large value i.e. 999.</inlineHelpText>
        <label>Default Month Range</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffc_statex__EmailTemplate__c</fullName>
        <label>Email Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc_statex__PrintTemplate__c</fullName>
        <label>Print Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffc_statex__Use_Invoice_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked account statements will be sent to the invoice email address rather than the finance contact.</description>
        <inlineHelpText>If this is checked account statements will be sent to the invoice email address rather than the finance contact.</inlineHelpText>
        <label>Use Invoice Email</label>
        <type>Checkbox</type>
    </fields>
    <label>Send Account Statements Settings</label>
</CustomObject>